[gd_scene load_steps=2 format=3 uid="uid://b8j4k5l6m7n8o"]

[ext_resource type="Script" uid="uid://fafw3nkogiya" path="res://Main.gd" id="1_main"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Spacer" type="Control" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ターン: 1 / 3
スコア - あなた: 0  CPU: 0"
horizontal_alignment = 1

[node name="CPUHandContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Slot1" type="PanelContainer" parent="VBoxContainer/CPUHandContainer"]
custom_minimum_size = Vector2(100, 140)
layout_mode = 2

[node name="Slot2" type="PanelContainer" parent="VBoxContainer/CPUHandContainer"]
custom_minimum_size = Vector2(100, 140)
layout_mode = 2

[node name="Slot3" type="PanelContainer" parent="VBoxContainer/CPUHandContainer"]
custom_minimum_size = Vector2(100, 140)
layout_mode = 2

[node name="BattleArea" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CPUSlot" type="PanelContainer" parent="VBoxContainer/BattleArea"]
custom_minimum_size = Vector2(100, 140)
layout_mode = 2
size_flags_horizontal = 4

[node name="CPUPlayedCard" type="TextureRect" parent="VBoxContainer/BattleArea/CPUSlot"]
layout_mode = 2
expand_mode = 1

[node name="PlayerSlot" type="PanelContainer" parent="VBoxContainer/BattleArea"]
custom_minimum_size = Vector2(100, 140)
layout_mode = 2
size_flags_horizontal = 4

[node name="PlayerPlayedCard" type="TextureRect" parent="VBoxContainer/BattleArea/PlayerSlot"]
layout_mode = 2
expand_mode = 1

[node name="ResultLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "カードを選んでください"
horizontal_alignment = 1

[node name="PlayerHandContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Slot1" type="PanelContainer" parent="VBoxContainer/PlayerHandContainer"]
custom_minimum_size = Vector2(100, 140)
layout_mode = 2

[node name="Slot2" type="PanelContainer" parent="VBoxContainer/PlayerHandContainer"]
custom_minimum_size = Vector2(100, 140)
layout_mode = 2

[node name="Slot3" type="PanelContainer" parent="VBoxContainer/PlayerHandContainer"]
custom_minimum_size = Vector2(100, 140)
layout_mode = 2

[node name="RestartButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "もう一度遊ぶ"
